# samp-plugin-template

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  PAWN_INCLUDE.inc  README.md  pawn.json  test.pwn
source/plugin/: CMakeLists.txt  common.hpp  impl.cpp  impl.hpp  main.cpp  natives.cpp  natives.hpp  plugin.def
